# openipmp

./: .gitignore  COPYING  README.md
src/DRMPlugin/: Makefile.am  autogen.sh  configure.in
src/DRMPlugin/Base64Factory/: Base64Factory.cpp  Base64Factory.dsp  Base64Factory.h  Base64Factory.vcproj  Makefile.am
src/DRMPlugin/CipherFactory/: BlockCipher.cpp  BlockCipher.h  CipherFactory.cpp  CipherFactory.dsp  CipherFactory.h  CipherFactory.vcproj  Makefile.am
src/DRMPlugin/DRMDecoderPlugin/: Makefile.am
src/DRMPlugin/DRMDecoderPlugin/ISMADRMDecManagerFactory/: ISMADRMDecManagerFactory.cpp  ISMADRMDecManagerFactory.dsp  ISMADRMDecManagerFactory.h  ISMADRMDecManagerFactory.vcproj  ISMADRMDecryptor.cpp  ISMADRMDecryptor.h  Makefile.am  OpenIPMPISMADRMDecManager.cpp  OpenIPMPISMADRMDecManager.h
src/DRMPlugin/DRMDecoderPlugin/OMADRMDecCommHandlerFactory/: Makefile.am  OMADRMDecCommHandlerFactory.cpp  OMADRMDecCommHandlerFactory.dsp  OMADRMDecCommHandlerFactory.h  OMADRMDecCommHandlerFactory.vcproj  OMADRMWS.cpp  OMADRMWS.hpp  OMADRMWSDecCommHandler.cpp  OMADRMWSDecCommHandler.h  WSDeviceHello.cpp  WSDeviceHello.hpp  WSInitialRORequest.cpp  WSInitialRORequest.hpp  WSRIHello.cpp  WSRIHello.hpp  WSROAcquisitionTrigger.cpp  WSROAcquisitionTrigger.hpp  WSRORequest.cpp  WSRORequest.hpp  WSROResponse.cpp  WSROResponse.hpp  WSRegistrationRequest.cpp  WSRegistrationRequest.hpp  WSRegistrationResponse.cpp  WSRegistrationResponse.hpp  ws_dec.wsdl
src/DRMPlugin/DRMDecoderPlugin/OMADRMDecManagerFactory/: AgentBase.cpp  AgentBase.h  AgentROAP.cpp  AgentROAP.h  FileOMADRMDecAgent.cpp  FileOMADRMDecAgent.h  Makefile.am  OMADRMDecAgent.cpp  OMADRMDecAgent.h  OMADRMDecManager.cpp  OMADRMDecManager.h  OMADRMDecManagerFactory.cpp  OMADRMDecManagerFactory.dsp  OMADRMDecManagerFactory.h  OMADRMDecManagerFactory.vcproj  OMADRMDecryptor.cpp  OMADRMDecryptor.h  OpenIPMPOMADRMDecManager.cpp  OpenIPMPOMADRMDecManager.h
src/DRMPlugin/DRMDecoderPlugin/OpenIPMPDRMDecManagerFactory/: Makefile.am  (+8 more)
src/DRMPlugin/DRMEncoderPlugin/: Makefile.am
src/DRMPlugin/DRMPluginAll/: DRMPluginAll.dsp  DRMPluginAll.dsw  DRMPluginAll.mak  DRMPluginAll.sln  DRMPluginAll.vcproj  Readme.html
src/DRMPlugin/MPEG2DRMPlugin/: Makefile.am
src/DRMPlugin/MPEG4DRMPlugin/: Makefile.am
src/DRMPlugin/OMADRM/: Makefile.am
src/DRMPlugin/OpenIPMPKeyManager/: Makefile.am  OpenIPMPKeyManager.cpp  OpenIPMPKeyManager.dsp  OpenIPMPKeyManager.h  OpenIPMPKeyManager.vcproj
src/DRMPlugin/OpenIPMPMessengerFactory/: Makefile.am  OpenIPMPMessengerFactory.cpp  OpenIPMPMessengerFactory.dsp  OpenIPMPMessengerFactory.h  OpenIPMPMessengerFactory.vcproj  OsmsCreateUserFault.cpp  OsmsCreateUserFault.hpp  OsmsCreateUserRequest.cpp  OsmsCreateUserRequest.hpp  OsmsCreateUserResponse.cpp  OsmsCreateUserResponse.hpp  OsmsGetContentKeyFault.cpp  OsmsGetContentKeyFault.hpp  OsmsGetContentKeyRequest.cpp  OsmsGetContentKeyRequest.hpp  OsmsGetContentKeyResponse.cpp  OsmsGetContentKeyResponse.hpp  OsmsLicenseFault.cpp  OsmsLicenseFault.hpp  OsmsLicenseRequest.cpp  OsmsLicenseRequest.hpp  OsmsLicenseResponse.cpp  OsmsLicenseResponse.hpp  OsmsOpenIPMPMessenger.cpp  OsmsOpenIPMPMessenger.h  OsmsQueryFault.cpp  OsmsQueryFault.hpp  OsmsQueryRequest.cpp  OsmsQueryRequest.hpp  OsmsQueryResponse.cpp  OsmsQueryResponse.hpp  OsmsRegisterContentAssignIdentifierFault.cpp  OsmsRegisterContentAssignIdentifierFault.hpp  OsmsRegisterContentAssignIdentifierRequest.cpp  OsmsRegisterContentAssignIdentifierRequest.hpp  OsmsRegisterContentAssignIdentifierResponse.cpp  OsmsRegisterContentAssignIdentifierResponse.hpp  OsmsRegisterContentExistingIdentifierFault.cpp  OsmsRegisterContentExistingIdentifierFault.hpp  OsmsRegisterContentExistingIdentifierRequest.cpp  (+40 more)
src/DRMPlugin/PublicCryptoFactory/: Makefile.am  OpenSSLPublicCrypto.cpp  OpenSSLPublicCrypto.h  PublicCryptoFactory.cpp  PublicCryptoFactory.dsp  PublicCryptoFactory.h  PublicCryptoFactory.vcproj
src/DRMPlugin/ThreadSyncFactory/: Makefile.am  PThreadsThreadSync.cpp  PThreadsThreadSync.h  ThreadSyncFactory.cpp  ThreadSyncFactory.dsp  ThreadSyncFactory.h  ThreadSyncFactory.vcproj  Win32ThreadSync.cpp  Win32ThreadSync.h
src/DRMPlugin/XMLFactory/: Makefile.am  XMLDocument.cpp  XMLDocument.h  XMLFactory.cpp  XMLFactory.dsp  XMLFactory.h  XMLFactory.vcproj
src/DRMPlugin/include/: BasicTypes.h  DRMLogger.h  GC.h  ICipher.h  IOpenIPMPMessenger.h  IPublicCrypto.h  IThreadSync.h  IXMLDocument.h  UTCTime.h  Value.h
src/DRMPlugin/openIPMP/: ContentAuthorizationManager.cpp  CryptoManager.cpp  DigitalSignature_Factory.cpp  IPMP_ContentIdentity.cpp  KeyTransport_Factory.cpp  Makefile.am  ODRLLicense.cpp  OpenIPMP.h  openipmp.dsp  openipmp.vcproj  osmsMessageAcquireUserKeyStoreRequest.cpp  osmsMessageAcquireUserKeyStoreResponseError.cpp  osmsMessageCreateUserRequest.cpp  osmsMessageCreateUserResponse.cpp  osmsMessageCreateUserResponseError.cpp  osmsMessageGetContentKeyRequest.cpp  osmsMessageGetContentKeyResponse.cpp  osmsMessageGetContentKeyResponseError.cpp  osmsMessageLicenseRequest.cpp  osmsMessageLicenseResponse.cpp  osmsMessageLicenseResponseError.cpp  osmsMessageQueryRequest.cpp  osmsMessageQueryResponse.cpp  osmsMessageRegisterContentAssignIdentifierRequest.cpp  osmsMessageRegisterContentAssignIdentifierResponse.cpp  osmsMessageRegisterContentAssignIdentifierResponseError.cpp  osmsMessageRegisterContentExistingIdentifierRequest.cpp  osmsMessageRegisterContentExistingIdentifierResponse.cpp  osmsMessageRegisterContentExistingIdentifierResponseError.cpp  osmsMessageRegisterDigitalItemInstanceRequest.cpp  osmsMessageRegisterDigitalItemInstanceResponse.cpp  osmsMessageRegisterDigitalItemInstanceResponseError.cpp  osmsMessageRegisterUserRequest.cpp  osmsMessageRegisterUserResponse.cpp  osmsMessageRegisterUserResponseError.cpp  osmsMessageRightsAuthorizationRequest.cpp  osmsMessageRightsAuthorizationResponse.cpp  osmsMessageUnknownRequestResponseError.cpp  osmsMessageUserLoginRequest.cpp  osmsMessageUserLoginResponse.cpp  (+3 more)
src/DRMPlugin/squashxml/: Makefile.am  XMLDocument.cpp  XMLMessage.cpp  squashxml.dsp  squashxml.vcproj
(+3581 files in other folders)
