SUBDIRS = Base64Factory CipherFactory openIPMP XMLFactory ThreadSyncFactory squashxml PublicCryptoFactory OpenIPMPMessengerFactory OpenIPMPKeyManager OMADRM DRMDecoderPlugin DRMEncoderPlugin MPEG4DRMPlugin OMADRM/Test/OMADRMTest MPEG2DRMPlugin

pkginclude_HEADERS = \
	./include/Value.h \
	./include/UTCTime.h \
	./include/BasicTypes.h \
	./DRMEncoderPlugin/include/ContentInfoManager.h \
	./DRMEncoderPlugin/ContentInfoManagerFactory/ContentInfoManagerFactory.h \
	./DRMDecoderPlugin/ISMADRMDecManagerFactory/ISMADRMDecManagerFactory.h \
	./DRMDecoderPlugin/OMADRMDecManagerFactory/OMADRMDecManagerFactory.h \
	./DRMDecoderPlugin/OpenIPMPDRMDecManagerFactory/OpenIPMPDRMDecManagerFactory.h \
	./DRMDecoderPlugin/include/DRMDecManagerException.h \
	./DRMDecoderPlugin/include/DRMInfoException.h \
	./DRMDecoderPlugin/include/IDRMDecryptor.h \
	./DRMDecoderPlugin/include/IISMADRMDecManager.h \
	./DRMDecoderPlugin/include/IISMADRMDecryptor.h \
	./DRMDecoderPlugin/include/IOMADRMDecManager.h \
	./DRMDecoderPlugin/include/IOMADRMDecryptor.h \
	./DRMDecoderPlugin/include/IOpenIPMPDRMDecManager.h \
	./DRMDecoderPlugin/include/IOpenIPMPDRMDecryptor.h \
	./DRMDecoderPlugin/include/ISMADRMInfo.h \
	./DRMDecoderPlugin/include/OMADRMInfo.h \
	./DRMDecoderPlugin/include/OpenIPMPDRMInfo.h \
	./openIPMP/OpenIPMP.h \
	./include/DRMLogger.h \
	./include/ICipher.h \
	./DRMDecoderPlugin/include/IDRMDecryptor.h \
	./DRMEncoderPlugin/include/IDRMEncManager.h \
	./DRMEncoderPlugin/include/IISMADRMEncManager.h \
	./MPEG4DRMPlugin/MPEG4SinfDRMPlugin/MPEG4SinfDRMDecoderPlugin/DecryptorHolder/DecryptorHolder.h \
	./MPEG4DRMPlugin/MPEG4SinfDRMPlugin/MPEG4SinfDRMEncoderPlugin/include/IISMAMPEG4SinfDRMEncryptor.h \
	./MPEG4DRMPlugin/MPEG4SinfDRMPlugin/include/IMPEG4DRMAtom.h \
	./MPEG4DRMPlugin/MPEG4SinfDRMPlugin/MPEG4SinfDRMEncoderPlugin/include/IMPEG4SinfDRMEncryptor.h \
	./DRMEncoderPlugin/include/IOMADRMEncManager.h \
	./MPEG4DRMPlugin/MPEG4SinfDRMPlugin/MPEG4SinfDRMEncoderPlugin/include/IOMAMPEG4SinfDRMEncryptor.h \
	./DRMEncoderPlugin/include/IOpenIPMPDRMEncManager.h \
	./MPEG4DRMPlugin/MPEG4SinfDRMPlugin/MPEG4SinfDRMEncoderPlugin/include/IOpenIPMPMPEG4SinfDRMEncryptor.h \
	./include/IPublicCrypto.h \
	./DRMEncoderPlugin/ISMADRMEncManagerFactory/ISMADRMEncManagerFactory.h \
	./MPEG4DRMPlugin/MPEG4SinfDRMPlugin/MPEG4SinfDRMEncoderPlugin/ISMAMPEG4SinfDRMEncryptor/ISMAMPEG4SinfDRMEncryptor.h \
	./include/IThreadSync.h \
	./include/IXMLDocument.h \
	./MPEG4DRMPlugin/include/MPEG4DRMPluginException.h \
	./DRMEncoderPlugin/OMADRMEncManagerFactory/OMADRMEncManagerFactory.h \
	./MPEG4DRMPlugin/MPEG4SinfDRMPlugin/MPEG4SinfDRMEncoderPlugin/OMAMPEG4SinfDRMEncryptor/OMAMPEG4SinfDRMEncryptor.h \
	./DRMEncoderPlugin/OpenIPMPDRMEncManagerFactory/OpenIPMPDRMEncManagerFactory.h \
	./MPEG4DRMPlugin/MPEG4SinfDRMPlugin/MPEG4SinfDRMEncoderPlugin/OpenIPMPMPEG4SinfDRMEncryptor/OpenIPMPMPEG4SinfDRMEncryptor.h \
	./PublicCryptoFactory/PublicCryptoFactory.h \
	./ThreadSyncFactory/ThreadSyncFactory.h \
	./XMLFactory/XMLFactory.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/include/CRC32Calculator.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/include/IIPMPControlInfoPart.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/include/IIPMPDescriptor.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/include/IIPMPStreamDataUpdate.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/include/ISigCertContainer.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/MPEG2IPMPXDRMEncoderPlugin/include/IMPEG2IPMPXDRMEncryptor.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/MPEG2IPMPXDRMEncoderPlugin/include/IMPEG2IPMPXEncoder.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/MPEG2IPMPXDRMEncoderPlugin/include/MPEG2IPMPXDRMEncryptor.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/MPEG2IPMPXDRMEncoderPlugin/MPEG2IPMPXDRMEncoder/MPEG2IPMPXDRMEncoder.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/IPMPData/AuthenticationData.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/IPMPData/CryptoContext.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/IPMPData/IPMPData.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/IPMPData/IPMPUserQuery.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/IPMPData/SecureContainerData.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/IPMPCrypto/Authenticator.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/IPMPCrypto/CryptoProvider.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/MPEG2IPMPXDRMDecoderPlugin/include/IIPMPTerminal.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/MPEG2IPMPXDRMDecoderPlugin/include/IPMPAgent.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/MPEG2IPMPXDRMDecoderPlugin/include/IPMPMessage.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/MPEG2IPMPXDRMDecoderPlugin/DecoderIPMPData/DecoderIPMPUserQuery.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/MPEG2IPMPXDRMDecoderPlugin/IPMPToolManager/IPMPToolManager.h \
	./MPEG2DRMPlugin/MPEG2IPMPXDRMPlugin/MPEG2IPMPXDRMDecoderPlugin/MessageRouter/MessageRouter.h

sdk_install: prebuild all install

sdk_uninstall: clean uninstall postuninstall

prebuild:
	@if test ! -d $(pkglibdir); \
	  then mkdir $(pkglibdir); \
	fi; \
	cp -p -d ../../ext/axis-c/lib/linux/libaxis* $(pkglibdir); \
	cp -p -d ../../ext/axis-c/lib/linux/libhttp* $(pkglibdir); \
	cp -p -d ../../ext/xerces/linux/lib/libxerces* $(pkglibdir);

postuninstall:
	@if test ! -d $(pkglibdir); \
	  then echo "Library directory does not exist!"; \
	  exit 1; \
	fi; \
	rm -rf $(pkglibdir); \
	if test ! -d $(pkgincludedir); \
	  then echo "Include directory does not exist!"; \
	  exit 1; \
	fi; \
	rm -rf $(pkgincludedir);
