AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libopenIPMP.a

libopenIPMP_a_SOURCES = \
	../../client/busobj/factories/AuxData_Factory.cpp \
	../../client/include/busobj/factories/AuxData_Factory.h \
	./DigitalSignature_Factory.cpp \
	../../client/include/busobj/factories/DigitalSignature_Factory.h \
	../../client/busobj/factories/DOI_Factory.cpp \
	../../client/include/busobj/factories/DOI_Factory.h \
	../../client/busobj/factories/IPMP_ContentId_Factory.cpp \
	../../client/include/busobj/factories/IPMP_ContentId_Factory.h \
	./KeyTransport_Factory.cpp \
	../../client/include/busobj/factories/KeyTransport_Factory.h \
	./OpenIPMP.h \
	../../client/busobj/factories/RightsHost_Factory.cpp \
	../../client/include/busobj/factories/RightsHost_Factory.h \
	../../client/busobj/AuxData.cpp \
	../../client/include/busobj/AuxData.h \
	../../client/busobj/ContentIdentity.cpp \
	../../client/include/busobj/ContentIdentity.h \
	../../client/busobj/DigitalSignature.cpp \
	../../client/include/busobj/DigitalSignature.h \
	../../client/busobj/DOI.cpp \
	../../client/include/busobj/DOI.h \
	../../client/busobj/Exception.cpp \
	../../client/include/busobj/Exception.h \
	./IPMP_ContentIdentity.cpp \
	../../client/include/busobj/IPMP_ContentIdentity.h \
	../../client/busobj/IPMP_MediaContext.cpp \
	../../client/include/busobj/IPMP_MediaContext.h \
	../../client/busobj/IPMP_MetaData.cpp \
	../../client/include/busobj/IPMP_MetaData.h \
	../../client/busobj/KeyTransport.cpp \
	../../client/include/busobj/KeyTransport.h \
	../../client/include/busobj/License.h \
	../../client/busobj/MPEGRELLicense.cpp \
	../../client/include/busobj/MPEGRELLicense.h \
	./ODRLLicense.cpp \
	../../client/include/busobj/ODRLLicense.h \
	../../client/busobj/RightsHost.cpp \
	../../client/include/busobj/RightsHost.h \
	../../client/busobj/UserContext.cpp \
	../../client/include/busobj/UserContext.h \
	../../client/busobj/XRMLLicense.cpp \
	../../client/include/busobj/XRMLLicense.h \
	./ContentAuthorizationManager.cpp \
	../../client/include/client/ContentAuthorizationManager.h \
	../../client/client/ContentRegistrationContext.cpp \
	../../client/include/client/ContentRegistrationContext.h \
	../../client/io/message/osmsMessage.cpp \
	../../client/include/io/message/osmsMessage.h \
	./osmsMessageAcquireUserKeyStoreRequest.cpp \
	../../client/include/io/message/osmsMessageAcquireUserKeyStoreRequest.h \
	./osmsMessageAcquireUserKeyStoreResponse.cpp \
	../../client/include/io/message/osmsMessageAcquireUserKeyStoreResponse.h \
	./osmsMessageAcquireUserKeyStoreResponseError.cpp \
	../../client/include/io/message/osmsMessageAcquireUserKeyStoreResponseError.h \
	./osmsMessageCreateUserRequest.cpp \
	../../client/include/io/message/osmsMessageCreateUserRequest.h \
	./osmsMessageCreateUserResponse.cpp \
	../../client/include/io/message/osmsMessageCreateUserResponse.h \
	./osmsMessageCreateUserResponseError.cpp \
	../../client/include/io/message/osmsMessageCreateUserResponseError.h \
	../../client/io/message/osmsMessageGenericResponseError.cpp \
	../../client/include/io/message/osmsMessageGenericResponseError.h \
	./osmsMessageGetContentKeyRequest.cpp \
	../../client/include/io/message/osmsMessageGetContentKeyRequest.h \
	./osmsMessageGetContentKeyResponse.cpp \
	../../client/include/io/message/osmsMessageGetContentKeyResponse.h \
	./osmsMessageGetContentKeyResponseError.cpp \
	../../client/include/io/message/osmsMessageGetContentKeyResponseError.h \
	./osmsMessageLicenseRequest.cpp \
	../../client/include/io/message/osmsMessageLicenseRequest.h \
	./osmsMessageLicenseResponse.cpp \
	../../client/include/io/message/osmsMessageLicenseResponse.h \
	./osmsMessageLicenseResponseError.cpp \
	../../client/include/io/message/osmsMessageLicenseResponseError.h \
	../../client/include/io/message/osmsMessageLoginRequest.h \
	../../client/include/io/message/osmsMessageLoginResponse.h \
	../../client/include/io/message/osmsMessageLoginResponseError.h \
	../../client/include/io/message/osmsMessageLogout.h \
	../../client/include/io/message/osmsMessageLogoutRequest.h \
	../../client/include/io/message/osmsMessageLogoutResponse.h \
	../../client/include/io/message/osmsMessageLogoutResponseError.h \
	./osmsMessageQueryRequest.cpp \
	../../client/include/io/message/osmsMessageQueryRequest.h \
	./osmsMessageQueryResponse.cpp \
	../../client/include/io/message/osmsMessageQueryResponse.h \
	./osmsMessageRegisterContentAssignIdentifierRequest.cpp \
	../../client/include/io/message/osmsMessageRegisterContentAssignIdentifierRequest.h \
	./osmsMessageRegisterContentAssignIdentifierResponse.cpp \
	../../client/include/io/message/osmsMessageRegisterContentAssignIdentifierResponse.h \
	./osmsMessageRegisterContentAssignIdentifierResponseError.cpp \
	../../client/include/io/message/osmsMessageRegisterContentAssignIdentifierResponseError.h \
	./osmsMessageRegisterContentExistingIdentifierRequest.cpp \
	../../client/include/io/message/osmsMessageRegisterContentExistingIdentifierRequest.h \
	./osmsMessageRegisterContentExistingIdentifierResponse.cpp \
	../../client/include/io/message/osmsMessageRegisterContentExistingIdentifierResponse.h \
	./osmsMessageRegisterContentExistingIdentifierResponseError.cpp \
	../../client/include/io/message/osmsMessageRegisterContentExistingIdentifierResponseError.h \
	./osmsMessageRegisterDigitalItemInstanceRequest.cpp \
	../../client/include/io/message/osmsMessageRegisterDigitalItemInstanceRequest.h \
	./osmsMessageRegisterDigitalItemInstanceResponse.cpp \
	../../client/include/io/message/osmsMessageRegisterDigitalItemInstanceResponse.h \
	./osmsMessageRegisterDigitalItemInstanceResponseError.cpp \
	../../client/include/io/message/osmsMessageRegisterDigitalItemInstanceResponseError.h \
	./osmsMessageRegisterUserRequest.cpp \
	../../client/include/io/message/osmsMessageRegisterUserRequest.h \
	./osmsMessageRegisterUserResponse.cpp \
	../../client/include/io/message/osmsMessageRegisterUserResponse.h \
	./osmsMessageRegisterUserResponseError.cpp \
	../../client/include/io/message/osmsMessageRegisterUserResponseError.h \
	./osmsMessageRightsAuthorizationRequest.cpp \
	../../client/include/io/message/osmsMessageRightsAuthorizationRequest.h \
	./osmsMessageRightsAuthorizationResponse.cpp \
	../../client/include/io/message/osmsMessageRightsAuthorizationResponse.h \
	./osmsMessageUnknownRequestResponseError.cpp \
	../../client/include/io/message/osmsMessageUnknownRequestResponseError.h \
	./osmsMessageUserLoginRequest.cpp \
	../../client/include/io/message/osmsMessageUserLoginRequest.h \
	./osmsMessageUserLoginResponse.cpp \
	../../client/include/io/message/osmsMessageUserLoginResponse.h \
	./osmsMessageUserLoginResponseError.cpp \
	../../client/include/io/message/osmsMessageUserLoginResponseError.h \
	../../client/io/message/osmsMessageUserLogoutRequest.cpp \
	../../client/include/io/message/osmsMessageUserLogoutRequest.h \
	./osmsMessageUserLogoutResponse.cpp \
	../../client/include/io/message/osmsMessageUserLogoutResponse.h \
	./osmsMessageUserLogoutResponseError.cpp \
	../../client/include/io/message/osmsMessageUserLogoutResponseError.h \
	../../client/io/network/SecurityManagerProxy.cpp \
	../../client/include/io/network/SecurityManagerProxy.h \
	../../client/tools/MemMan.cpp \
	../../client/include/tools/MemMan.h \
	../../client/include/tools/OctetString.h \
	../../client/tools/OlCharArray.cpp \
	../../client/include/tools/OlCharArray.h \
	../../client/include/tools/OlDate.h \
	../../client/include/tools/OlLong.h \
	../../client/tools/OlMemMan.cpp \
	../../client/include/tools/OlMemMan.h \
	../../client/tools/OlRaw.cpp \
	../../client/include/tools/OlRaw.h \
	../../client/crypto/CipherContext.cpp \
	../../client/include/crypto/CipherContext.h \
	./CryptoManager.cpp \
	../../client/include/crypto/CryptoManager.h \
	../../client/crypto/HashContext.cpp \
	../../client/include/crypto/HashContext.h

INCLUDES = -I../../client/include -I../../../ext/openssl/include -I../../../ext/squashxml/include -I../../../ext/xerces/include

AM_CXXFLAGS = -DLINUX -DUNIXSTYLE
