AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libSquashXML.a

libSquashXML_a_SOURCES = \
	../../../ext/squashxml/include/squashxml/xml/datatype/DataTypeAttribute.h \
	../../../ext/squashxml/include/squashxml/xml/datatype/DataTypeBinaryHex.h \
	../../../ext/squashxml/include/squashxml/xml/datatype/DataTypeByteArray.h \
	../../../ext/squashxml/include/squashxml/xml/datatype/DataTypeCharArray.h \
	../../../ext/squashxml/include/squashxml/xml/datatype/DataTypeCodex.h \
	../../../ext/squashxml/include/squashxml/xml/datatype/DataTypeDate.h \
	../../../ext/squashxml/include/squashxml/xml/datatype/DataTypeInt.h \
	../../../ext/squashxml/include/squashxml/xml/datatype/DataTypeLong.h \
	./XMLDocument.cpp \
	../../../ext/squashxml/include/squashxml/xml/XMLDocument.h \
	./XMLMessage.cpp \
	../../../ext/squashxml/include/squashxml/xml/XMLMessage.h \
	../../../ext/squashxml/src/xml/XMLMessageBean.cpp \
	../../../ext/squashxml/include/squashxml/xml/XMLMessageBean.h \
	../../../ext/squashxml/include/squashxml/tools/ByteArray.h \
	../../../ext/squashxml/include/squashxml/tools/Date.h \
	../../../ext/squashxml/src/tools/FileLogger.cpp \
	../../../ext/squashxml/include/squashxml/tools/FileLogger.h \
	../../../ext/squashxml/src/tools/FileTool.cpp \
	../../../ext/squashxml/include/squashxml/tools/FileTool.h \
	../../../ext/squashxml/src/tools/HashMap.cpp \
	../../../ext/squashxml/include/squashxml/tools/HashMap.h \
	../../../ext/squashxml/src/tools/Logger.cpp \
	../../../ext/squashxml/include/squashxml/tools/Logger.h \
	../../../ext/squashxml/src/tools/RFC1521Base64.cpp \
	../../../ext/squashxml/include/squashxml/tools/RFC1521Base64.h \
	../../../ext/squashxml/src/socket/BlockingClientSocket.cpp \
	../../../ext/squashxml/include/squashxml/socket/BlockingClientSocket.h \
	../../../ext/squashxml/src/socket/BlockingSocket.cpp \
	../../../ext/squashxml/include/squashxml/socket/BlockingSocket.h \
	../../../ext/squashxml/src/socket/HTTPTunnelClient.cpp \
	../../../ext/squashxml/include/squashxml/socket/HTTPTunnelClient.h \
	../../../ext/squashxml/src/socket/MessageContainer.cpp \
	../../../ext/squashxml/include/squashxml/socket/MessageContainer.h \
	../../../ext/squashxml/src/socket/SquashXMLServletClient.cpp \
	../../../ext/squashxml/include/squashxml/socket/SquashXMLServletClient.h

INCLUDES = -I../../../ext/squashxml/include -I../../../ext/xerces/include

AM_CXXFLAGS = -DLINUX
