AUTOMAKE_OPTIONS = foreign

pkglib_LIBRARIES = libIPMPData.a

libIPMPData_a_SOURCES = AuthenticationData.h AuthenticationData.cpp CryptoContext.h CryptoContext.cpp IPMPData.h IPMPData.cpp IPMPUserQuery.h IPMPUserQuery.cpp SecureContainerData.h SecureContainerData.cpp

INCLUDES = -I../IPMPCrypto -I../../../include -I../../include -I../include

AM_CXXFLAGS = -DLINUX
