AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libOMADRMMQDecCommHandler.a

libOMADRMMQDecCommHandler_a_SOURCES = OMADRMMQDecCommHandler.h OMADRMMQDecCommHandler.cpp

INCLUDES = -I../../../ThreadSyncFactory -I../../../Base64Factory -I../../ROAPParser -I../../../XMLFactory -I../../../DRMDecoderPlugin/include -I../../include -I../../../include -I../../ROAP -I../OMADRMServer -I../../OMADRMCrypto -I../../OMADRMCommon

AM_CXXFLAGS = -DLINUX
