AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libOMADRMMQEncCommHandler.a

libOMADRMMQEncCommHandler_a_SOURCES = OMADRMMQEncCommHandler.h OMADRMMQEncCommHandler.cpp

INCLUDES = -I../../../ThreadSyncFactory -I../../ROAPParser -I../../../Base64Factory -I../../../XMLFactory -I../../include -I../../../DRMEncoderPlugin/include -I../../../include -I../../ROAP -I../OMADRMServer -I../../OMADRMCrypto -I../../OMADRMCommon

AM_CXXFLAGS = -DLINUX
