AUTOMAKE_OPTIONS = foreign

pkglib_LIBRARIES = libDecoderIPMPControlInfo.a

libDecoderIPMPControlInfo_a_SOURCES = DecoderIPMPControlInfo.h DecoderIPMPControlInfo.cpp

INCLUDES = -I../../../../include -I../../../include -I../../include -I../include -I ../../IPMPCrypto -I../OpenIPMPTool -I../MessageRouter -I../../IPMPControlInfo -I ../../IPMPData -I../DecoderIPMPData -I../../../../DRMDecoderPlugin/include

AM_CXXFLAGS = -DLINUX
