AUTOMAKE_OPTIONS = foreign

pkglib_LIBRARIES = libIPMPControlInfoParser.a

libIPMPControlInfoParser_a_SOURCES = IPMPControlInfoParser.h IPMPControlInfoParser.cpp

INCLUDES = -I../../../../include -I../../../include -I../../include -I../include -I ../../IPMPControlInfo -I../../IPMPData -I../../IPMPCrypto -I../DecoderIPMPControlInfo -I ../DecoderIPMPData

AM_CXXFLAGS = -DLINUX
