AUTOMAKE_OPTIONS = foreign

pkglib_LIBRARIES = libIPMPToolManager.a

libIPMPToolManager_a_SOURCES = IPMPToolManager.h IPMPToolManager.cpp

INCLUDES = -I../../../../ThreadSyncFactory -I../../../../include -I../../../include -I../../include -I../include -I../../IPMPData -I../MessageRouter -I ../IPMPDataParser -I../../IPMPCrypto -I../IPMPControlInfoParser -I ../../IPMPControlInfo -I../DecoderIPMPControlInfo -I../DecoderIPMPData

AM_CXXFLAGS = -DLINUX
